fix: add margin to routing transition for consistent spacing

--- a/packages/web-qwik/src/global.scss
+++ b/packages/web-qwik/src/global.scss
@@ -5,6 +5,7 @@ body {
 }
 
 .routing-transition {
+  margin: 2rem 0;
   view-transition-name: routing;
 }
 
